--- a/Website/index.html
+++ b/Website/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>รายงานโปรเจกต์ Smart Gas Detector</title>
-    <link rel="stylesheet" href="Website/styles.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <header>
