--- a/Website/index.html
+++ b/Website/index.html
@@ -1,45 +1,29 @@
-<!DOCTYPE html>
-<html lang="th">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>รายงานโปรเจกต์ Smart Gas Detector</title>
-    <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
-</head>
-<body>
-    <header>
-        <h1>โปรเจกต์ Smart Gas Detector</h1>
-        <h2>วิชา PHYSICAL COMPUTING รหัสวิชา 06016409</h2>
-        <h3>ชั้นปีที่ 2 สถาบันเทคโนโลยีพระจอมเกล้าเจ้าคุณทหารลาดกระบัง</h3>
-    </header>
+---
+layout: default
+title: หน้าแรก
+---
 
-    <section>
-        <h2>จุดประสงค์ของโปรเจกต์</h2>
-        <ul>
-            <li>เพิ่มความปลอดภัย: ตรวจจับและแจ้งเตือนการรั่วไหลของแก๊สอย่างรวดเร็ว เพื่อลดความเสี่ยงจากการระเบิด เพลิงไหม้ หรืออันตรายจากการสูดดมแก๊สพิษ</li>
-            <li>เพื่อแจ้งเตือนการรั่วไหลของแก๊ส: ส่งการแจ้งเตือนถึงผู้ใช้งานผ่านอุปกรณ์ต่าง ๆ เช่น แอปมือถือ สัญญาณเสียง หรือไฟแจ้งเตือน เพื่อให้ผู้ใช้สามารถตอบสนองได้อย่างรวดเร็ว</li>
-            <li>เพื่อเสริมประสิทธิภาพระบบรักษาความปลอดภัย: เชื่อมต่อกับระบบความปลอดภัยอื่น ๆ เช่น ระบบดับเพลิงหรือระบบระบายอากาศอัตโนมัติ</li>
-            <li>เพื่อพัฒนาการในการประยุกต์ใช้ Microcontroller</li>
-        </ul>
-    </section>
+<header>
+    <h1>โปรเจกต์ Smart Gas Detector</h1>
+    <h2>วิชา PHYSICAL COMPUTING รหัสวิชา 06016409</h2>
+    <h3>ชั้นปีที่ 2 สถาบันเทคโนโลยีพระจอมเกล้าเจ้าคุณทหารลาดกระบัง</h3>
+</header>
 
-    <section>
-        <h2>รายละเอียดของโปรเจกต์</h2>
-        <p>โปรเจกต์ Smart Gas Detector เป็นการตรวจจับการรั่วไหลของแก๊สที่ติดไฟได้ โดยใช้ MQ-9 Sensor Gas ในการตรวจจับ หากเกิดการรั่วไหลของแก๊ส จะมีเสียงแจ้งเตือนโดยใช้ Buzzer และแสงไฟ LED กระพริบ และยังส่งการแจ้งเตือนไปยังโทรศัพท์มือถือผ่าน Line Notify</p>
-    </section>
+<section>
+    <h2>จุดประสงค์ของโปรเจกต์</h2>
+    <ul>
+        <li>เพิ่มความปลอดภัย: ตรวจจับและแจ้งเตือนการรั่วไหลของแก๊สอย่างรวดเร็ว เพื่อลดความเสี่ยงจากการระเบิด เพลิงไหม้ หรืออันตรายจากการสูดดมแก๊สพิษ</li>
+        <li>เพื่อแจ้งเตือนการรั่วไหลของแก๊ส: ส่งการแจ้งเตือนถึงผู้ใช้งานผ่านอุปกรณ์ต่าง ๆ เช่น แอปมือถือ สัญญาณเสียง หรือไฟแจ้งเตือน เพื่อให้ผู้ใช้สามารถตอบสนองได้อย่างรวดเร็ว</li>
+        <li>เพื่อเสริมประสิทธิภาพระบบรักษาความปลอดภัย: เชื่อมต่อกับระบบความปลอดภัยอื่น ๆ เช่น ระบบดับเพลิงหรือระบบระบายอากาศอัตโนมัติ</li>
+        <li>เพื่อพัฒนาการในการประยุกต์ใช้ Microcontroller</li>
+    </ul>
+</section>
 
-    <section>
-        <h2>สมาชิก</h2>
-        <ol>
-            <li>66070025 นายจักรภพ บัวจันทร์</li>
-            <li>66070034 นายเจษฎาพร บัวศรี</li>
-            <li>66070046 นายชัยธวัช ชมภูเพ็ชร</li>
-            <li>66070242 นายกิตติภูมิ วงศ์ษา</li>
-        </ol>
-    </section>
+<section>
+    <h2>รายละเอียดของโปรเจกต์</h2>
+    <p>โปรเจกต์ Smart Gas Detector เป็นการตรวจจับการรั่วไหลของแก๊สที่ติดไฟได้ โดยใช้ MQ-9 Sensor Gas ในการตรวจจับ หากเกิดการรั่วไหลของแก๊ส จะมีเสียงแจ้งเตือนโดยใช้ Buzzer และแสงไฟ LED กระพริบ และยังส่งการแจ้งเตือนไปยังโทรศัพท์มือถือผ่าน Line Notify</p>
+</section>
 
-    <footer>
-        <p>&copy; 2024 สถาบันเทคโนโลยีพระจอมเกล้าเจ้าคุณทหารลาดกระบัง</p>
-    </footer>
-</body>
-</html>
+<footer>
+    <p>&copy; 2024 สถาบันเทคโนโลยีพระจอมเกล้าเจ้าคุณทหารลาดกระบัง</p>
+</footer>
