--- a/Website/index.html
+++ b/Website/index.html
@@ -3,27 +3,16 @@ layout: default
 title: หน้าแรก
 ---
 
-<header>
-    <h1>โปรเจกต์ Smart Gas Detector</h1>
-    <h2>วิชา PHYSICAL COMPUTING รหัสวิชา 06016409</h2>
-    <h3>ชั้นปีที่ 2 สถาบันเทคโนโลยีพระจอมเกล้าเจ้าคุณทหารลาดกระบัง</h3>
-</header>
+<section>
+    <h2>แนะนำโปรดักต์ของเรา</h2>
+    <p>ยินดีต้อนรับสู่หน้าเว็บพรีเซ็นต์โปรดักต์ของเรา ซึ่งรวมข้อมูลเกี่ยวกับการใช้งาน คุณสมบัติเด่น และรายละเอียดของโปรดักต์ที่เราภูมิใจนำเสนอ</p>
+</section>
 
 <section>
-    <h2>จุดประสงค์ของโปรเจกต์</h2>
+    <h2>คุณสมบัติเด่น</h2>
     <ul>
-        <li>เพิ่มความปลอดภัย: ตรวจจับและแจ้งเตือนการรั่วไหลของแก๊สอย่างรวดเร็ว เพื่อลดความเสี่ยงจากการระเบิด เพลิงไหม้ หรืออันตรายจากการสูดดมแก๊สพิษ</li>
-        <li>เพื่อแจ้งเตือนการรั่วไหลของแก๊ส: ส่งการแจ้งเตือนถึงผู้ใช้งานผ่านอุปกรณ์ต่าง ๆ เช่น แอปมือถือ สัญญาณเสียง หรือไฟแจ้งเตือน เพื่อให้ผู้ใช้สามารถตอบสนองได้อย่างรวดเร็ว</li>
-        <li>เพื่อเสริมประสิทธิภาพระบบรักษาความปลอดภัย: เชื่อมต่อกับระบบความปลอดภัยอื่น ๆ เช่น ระบบดับเพลิงหรือระบบระบายอากาศอัตโนมัติ</li>
-        <li>เพื่อพัฒนาการในการประยุกต์ใช้ Microcontroller</li>
+        <li>คุณสมบัติที่ 1</li>
+        <li>คุณสมบัติที่ 2</li>
+        <li>คุณสมบัติที่ 3</li>
     </ul>
 </section>
-
-<section>
-    <h2>รายละเอียดของโปรเจกต์</h2>
-    <p>โปรเจกต์ Smart Gas Detector เป็นการตรวจจับการรั่วไหลของแก๊สที่ติดไฟได้ โดยใช้ MQ-9 Sensor Gas ในการตรวจจับ หากเกิดการรั่วไหลของแก๊ส จะมีเสียงแจ้งเตือนโดยใช้ Buzzer และแสงไฟ LED กระพริบ และยังส่งการแจ้งเตือนไปยังโทรศัพท์มือถือผ่าน Line Notify</p>
-</section>
-
-<footer>
-    <p>&copy; 2024 สถาบันเทคโนโลยีพระจอมเกล้าเจ้าคุณทหารลาดกระบัง</p>
-</footer>
