--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Smart Gas Detector
 ---
-
+<link rel="stylesheet" href="/assets/css/style.css">
 <header>
     <h1>Physical Computing Project 2024 - IT KMITL</h1>
     <p>รายงานฉบับนี้จัดทำขึ้นเพื่อเป็นส่วนหนึ่งของวิชา PHYSICAL COMPUTING รหัสวิชา 06016409 ชั้นปีที่ 2 สถาบันเทคโนโลยีพระจอมเกล้าเจ้าคุณทหารลาดกระบัง</p>
