--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html lang="th">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="/assets/css/style.css">
-</head>
+---
+layout: default
+title: Smart Gas Detector
+---
+
 <header>
     <h1>Physical Computing Project 2024 - IT KMITL</h1>
     <p>รายงานฉบับนี้จัดทำขึ้นเพื่อเป็นส่วนหนึ่งของวิชา PHYSICAL COMPUTING รหัสวิชา 06016409 ชั้นปีที่ 2 สถาบันเทคโนโลยีพระจอมเกล้าเจ้าคุณทหารลาดกระบัง</p>
